# fullstack-webapp

./: .gitignore
backend/: CMakeLists.txt
backend/cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzer.cmake  Utils.cmake
backend/src/: CMakeLists.txt  config.hpp  connection.hpp  main.cpp  server.cpp  server.hpp  test.cpp  util.cpp  util.hpp
frontend/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/js_src/: NotesAPI.ts  main.ts
frontend/public/: index.html
frontend/public/styles/: header.css  main.css  sidebar.css
frontend/src/: main.ts
frontend/styles/: preview.css  sidebar.css
